--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,10 @@
+astroid==2.2.5
 cached-property==1.5.1
+isort==4.3.21
+lazy-object-proxy==1.4.1
+mccabe==0.6.1
 npyscreen==4.10.5
+pylint==2.3.1
+six==1.12.0
+typed-ast==1.4.0
+wrapt==1.11.2
