--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,10 @@ cached-property==1.5.1
 isort==4.3.21
 lazy-object-proxy==1.4.1
 mccabe==0.6.1
+nose==1.3.7
 npyscreen==4.10.5
 pylint==2.3.1
 six==1.12.0
+testfixtures==6.10.0
 typed-ast==1.4.0
 wrapt==1.11.2
