--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ lazy-object-proxy==1.4.1
 mccabe==0.6.1
 nose==1.3.7
 npyscreen==4.10.5
+prettytable==0.7.2
 pylint==2.3.1
 six==1.12.0
 testfixtures==6.10.0
